# clvr

./: .env.example  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs  trade.rs
src/clvr/: algorithm.rs  algorithm_tests.rs  mod.rs
src/clvr/model/: clvr_model.rs  mod.rs
src/model/: clvr_model.rs  mod.rs
src/server/: eip2612.rs  eip2612_tests.rs  handlers.rs  mod.rs  swap_router_v3.rs
src/server/handlers_types/: mod.rs
src/trade/: implementation.rs  mod.rs
src/trade_types/: implementation.rs
src/trades/: implementation.rs  mod.rs
